Add documentation for groups API
